--- a/index.html
+++ b/index.html
@@ -7,7 +7,48 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="left-side">
+            <div class="logo-wrapper">
+                <img src="./imgs/logo_placeholder.png" alt="Logo">
+            </div>
+        </div>
+        <div id="right-side">
+            <div class="title-wrapper">
+                <p>This is not a real online service. You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
+                <p>You know you want to.</p>
+            </div>
+            <div class="form-wrapper">
+                <h3>Let's do this!</h3>
+                <form action="#">
+                    <div class="input-group">
+                        <label for="first-name">first name</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </div>
+                    <div class="input-group">
+                        <label for="last-name">last name</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+                    <div class="input-group">
+                        <label for="email">email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                    <div class="input-group">
+                        <label for="phone">phone number</label>
+                        <input type="text" name="phone" id="phone">
+                    </div>
+                    <div class="input-group">
+                        <label for="password">password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="input-group">
+                        <label for="password-confirm">confirm password</label>
+                        <input type="password" name="password-confirm" id="password-confirm">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
